Increase weight for xs font size. Removed placeholder, the layout was looking cluttered. Fixed spacing issues in css

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -69,7 +69,7 @@ input {
     }
 
     &:focus {
-        border: 2px solid $green;
+        border: 1px solid $green;
         box-shadow: 0 0 3px rgba($color: $green, $alpha: 0.24);
     }
 }
