--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -44,7 +44,7 @@ xs: extra small
 @mixin fs-xs {
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-size: 0.60rem; // 10px
-    font-weight: 400;
+    font-weight: 600;
     text-transform: uppercase;
     line-height: 1.65em;
 }
